--- a/src/index.html
+++ b/src/index.html
@@ -18,4 +18,5 @@
 <script type="text/javascript" src="./assets/js/jquery.min.js"></script>
 <script type="text/javascript" src="./assets/js/jquer-comfirm.js"></script>
  <script type="text/javascript" src="./assets/js/material-dashboard.js"></script>
+ <script type="text/javascript" src="./assets/json/currency.json"></script>
 </html>
